--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -89,7 +89,7 @@
         alert('COD Order placed successfully!');
         localStorage.removeItem('cart');
         localStorage.removeItem('totalAmount');
-        window.location.href = '/my-orders';
+        window.location.href = 'orders';
       } else {
         alert('Failed to place COD order');
       }
